# prog2100

./: README.md
C++ Lessons/Week 01 - Intro/: Source.cpp
C++ Lessons/Week 02 - Validation/: RegEx Val Link.docx
C++ Lessons/Week 03 - Pointers and Arrays/: Passing Arrays C++.docx  Point Ref & Dynamic Link.docx  Pointers.xlsx  Returning an array.docx  Stack Heap.docx  Undefined Behavior.docx
C++ Lessons/Week 05 - Headers & OP overloading/: ComplexNumber.cpp  Operator Overloading.docx  Preprocessor Dir & Guards.docx
Convert/: CMakeLists.txt  main.cpp  main.s
DynamicArrays/: CMakeLists.txt  DynamicArrays.cpp
Hanoi1/: CMakeLists.txt  Hanoi1.cpp
Hello/: .anjuta_sym_db.db  hello.cpp
LifeConsole/: CMakeLists.txt  Life.cpp  LifeConsole.cpp  life.h  utility.cpp  utility.h
arrays/: CMakeLists.txt  PassingArraysSource.cpp
casting/: CMakeLists.txt  main.cpp
classy/: CMakeLists.txt  main.cpp
fileio/: CMakeLists.txt  main.cpp
inheritor/: CMakeLists.txt  main.cpp
inheritor_2/: CMakeLists.txt
leapyear/: CMakeLists.txt  main.cpp
leapyear-timed/: CMakeLists.txt  main.cpp
minheritor/: CMakeLists.txt  main.cpp
minheritor_2/: CMakeLists.txt  animal.cpp  animal.h  cat.h  human.h  main.cpp  mammal.cpp  mammal.h
minmax/: CMakeLists.txt  minmax.cpp
orderops/: CMakeLists.txt  main.cpp
overload/: CMakeLists.txt  main.cpp
parsing/: CMakeLists.txt  Source.cpp
quickarray/: CMakeLists.txt  main.cpp
scoping/: CMakeLists.txt  main.cpp
string/: CMakeLists.txt  String.cpp
testcmd/: CMakeLists.txt  main.cpp
validator1/: CMakeLists.txt  main.cpp
(+122 files in other folders)
